# python-pytest-template-scipy

./: .dockerignore  .gitignore  Dockerfile  README.md  dispatch.py  pyproject.toml  requirements.txt  set_env.sh
.github/workflows/: build.yml
canary_tests/: owl_test.sh  test_samples.py
canary_tests/sample00/: exercise-00-pass.py
canary_tests/sample01/: exercise-01-fail.py
tests/: conftest.py  test_results.py  test_style.py  test_syntax.py
