[project]
name="eca-pytest-template-scipy"
version="2024.05.11"
dependencies=[
   "matplotlib==3.10.1",
   "numpy==2.2.3",
   "pandas==2.2.3",
   "pillow==11.1.0",
   "pip==25.0.1",
   "pytest==8.3.4",
   "pytest-json-report==1.5.0",
   "pytest-xdist==3.6.1",
   "requests==2.32.3",
   "scipy==1.15.2",
   "tabulate==0.9.0",
]
