[project]
name="eca-pytest-template-scipy"
version="2025.03.12"
dependencies=[
    "matplotlib==3.10.6",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "pytest==8.3.5",
    "pytest-json-report==1.5.0",
    "pytest-xdist==3.6.1",
    "requests==2.32.5",
    "scipy==1.16.3",
    "tabulate==0.9.0",
]
